--- a/bower.json
+++ b/bower.json
@@ -20,6 +20,8 @@
     "d3": "~3.5.14",
     "angular": "^1.5.0",
     "bootstrap": "^3.3.6",
-    "jquery": "^2.2.0"
+    "jquery": "^2.2.0",
+    "angular-ui-router": "^0.2.18",
+    "requirejs": "^2.1.22"
   }
 }
