--- a/bower.json
+++ b/bower.json
@@ -22,6 +22,8 @@
     "bootstrap": "^3.3.6",
     "jquery": "^2.2.0",
     "angular-ui-router": "^0.2.18",
-    "requirejs": "^2.1.22"
+    "requirejs": "^2.1.22",
+    "bootstrap-sass": "^3.3.6",
+    "angular-bootstrap": "^1.1.2"
   }
 }
